Bug 289533 - Invitation confirmation sent to wrong person and contains wrong translation
Summary: Invitation confirmation sent to wrong person and contains wrong translation
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: agendaview (weekview) (other bugs)
Version First Reported In: 4.7
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-21 22:11 UTC by Gunter Ohrner
Modified: 2013-10-31 21:53 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gunter Ohrner 2011-12-21 22:11:59 UTC
Version:           4.7 (using KDE 4.7.3) 
OS:                Linux

Following sentence if displayed by kMail "Ihre Antwort als Sitz wird erbeten" while "Ihre Antwort als Leiter wird erbeten" when displaying the following ICS file.

I also do not really understand why kMail requests any action from me at all:
a) I'm not the event's creator (XXX@XXX) but was only invited (XXX2@XXX2).
b) Even if I was the creator / Chair, why would I need to take any action, this is just a confirmation the the
    invited guy (me) confirmed the invitation, right?

BEGIN:VCALENDAR
PRODID:-//K Desktop Environment//NONSGML KOrganizer 4.7.4//EN
VERSION:2.0
METHOD:REQUEST
BEGIN:VEVENT
CREATED:20111221T184511Z
ORGANIZER;CN=3D"Ohrner-Datensyst Ohrner/059/EXT/EEC":MAILTO:
 ohrner-datensyst.ohrner@daimler.com
ATTENDEE;CN=3D"XXX";RSVP=3DFALSE;
 PARTSTAT=3DACCEPTED;ROLE=3DCHAIR;X-UID=3D48199200:mailto:
 XXX@XXX
ATTENDEE;RSVP=3DTRUE;PARTSTAT=3DNEEDS-ACTION;ROLE=3DREQ-PARTICIPANT;
 X-UID=3D48106128:mailto:XXX2@XXX2
X-LOTUS-APPTTYPE:3
X-LOTUS-BROADCAST:FALSE
X-LOTUS-NOTESVERSION:2
X-LOTUS-NOTICETYPE:I
X-LOTUS-UPDATE-SEQ:1
X-LOTUS-UPDATE-WISL:$S:1;$L:1;$B:1;$R:1;$E:1;$W:1;$O:1;$M:1
DTSTAMP:20111221T120357Z
UID:77BEEBF2D107DB0DC125796D00422C8E-Lotus_Notes_Generated
SEQUENCE:1
LAST-MODIFIED:20111221T184437Z
SUMMARY:Z=C3=A4hleXXXX
CATEGORIES:Privat
DTSTART:20120110T140000Z
DTEND:20120110T150000Z
TRANSP:OPAQUE
END:VEVENT
END:VCALENDAR

Reproducible: Always

Steps to Reproduce:
I received the following invitation and accepted:

BEGIN:VCALENDAR
X-LOTUS-CHARSET:UTF-8
VERSION:2.0
PRODID:-//Lotus Development Corporation//NONSGML Notes 7.0//EN
METHOD:REQUEST
BEGIN:VTIMEZONE
TZID:W. Europe
BEGIN:STANDARD
DTSTART:19501029T020000
TZOFFSETFROM:+0200
TZOFFSETTO:+0100
RRULE:FREQ=3DYEARLY;BYMINUTE=3D0;BYHOUR=3D2;BYDAY=3D-1SU;BYMONTH=3D10
END:STANDARD
BEGIN:DAYLIGHT
DTSTART:19500326T020000
TZOFFSETFROM:+0100
TZOFFSETTO:+0200
RRULE:FREQ=3DYEARLY;BYMINUTE=3D0;BYHOUR=3D2;BYDAY=3D-1SU;BYMONTH=3D3
END:DAYLIGHT
END:VTIMEZONE
BEGIN:VEVENT
DTSTART;TZID=3D"W. Europe":20120110T150000
DTEND;TZID=3D"W. Europe":20120110T160000
TRANSP:OPAQUE
DTSTAMP:20111221T120357Z
SEQUENCE:0
ATTENDEE;ROLE=3DCHAIR;PARTSTAT=3DACCEPTED
 ;CN=3D"XXX";RSVP=3DFALSE
 :mailto:XXX@XXX
ATTENDEE;ROLE=3DREQ-PARTICIPANT;PARTSTAT=3DNEEDS-ACTION;RSVP=3DTRUE
 :mailto:XXX2@XXX2
CLASS:PUBLIC
SUMMARY:Z=C3=A4hleXXXX
ORGANIZER;CN=3D"XXX"
 :mailto:XXX@XXX
UID:77BEEBF2D107DB0DC125796D00422C8E-Lotus_Notes_Generated
X-LOTUS-BROADCAST:FALSE
X-LOTUS-UPDATE-SEQ:1
X-LOTUS-UPDATE-WISL:$S:1;$L:1;$B:1;$R:1;$E:1;$W:1;$O:1;$M:1
X-LOTUS-NOTESVERSION:2
X-LOTUS-NOTICETYPE:I
X-LOTUS-APPTTYPE:3
X-LOTUS-CHILD_UID:77BEEBF2D107DB0DC125796D00422C8E
END:VEVENT
END:VCALENDAR

Actual Results:  
An invitation confirmation with strange to and from addresses was generated by kMail or kOrganizer: (See Details field above.)

It had my own address as the "To" address, the creator's address as the "From" address, and requested me to confirm the confirmation as the meeting's "Sitz", which is a wrong translation of "Chair" in this context. "Leiter" would probably be the correct translation.

Expected Results:  
The confirmation should have been sent to the event's creator, not to me. (To and From were swapped.)
Additionally, the German translation of its text was wrong, correct would be:

"Ihre Antwort als Leiter wird erbeten."

The set of presented options is also strange for the meeting's creator / organizer.
Comment 1 Burkhard Lück 2011-12-22 06:51:08 UTC
The wrong german translation is fixed with Revision 1269869/1269870 in trunk (4.8) and branch (4.7), thanks Gunter Ohrner for spotting this.
Comment 2 Christophe Marin 2011-12-22 23:56:58 UTC
so, the issue is fixed now ?
Comment 3 Gunter Ohrner 2011-12-23 08:34:31 UTC
Not really. The wrong translation is fixed, but that still does not explain the (from my point of view) swapped sender/receiver addresses in the confirmation mail, and it does not explain why the meeting's Chair should "Accept" or "Reject" a *confirmation* from a participant.

Maybe I should have split the translation issue into a separate bug. :)
Comment 4 honkir 2013-10-01 12:19:11 UTC
I have a similar problem - when I accept the incomming invitation (through IMAP), the response mail would be sent with FROM=invitation-creator@email and TO=all-invitees@email. From my point of view, this is completely twisted:

 1. I want the meeting organizer to know, that I'm going to go to the meeting.
 2. All other invitees do not need to bee informed about it.
 3. I can not send the e-mail with FROM set to any email address except my own (a properly configured smtp server with authentication).

Result: I'm not able to accept meeting invitations. In some cases, the event won't be recorded into my calendar, byt I expect this to be another problem.
Comment 5 honkir 2013-10-01 12:22:50 UTC
I have noticed, that this bug is pretty old and the functionality has been broken with one of the last updates, no more than 6 months ago. Should I put the bug description elsewhere?
Comment 6 Sergio Martins 2013-10-31 21:53:57 UTC
Git commit 5efe6da97ced262603b1b5b50798c5df76cc0f0d by Sergio Martins.
Committed on 31/10/2013 at 21:48.
Pushed by smartins into branch 'KDE/4.11'.

Fix bug where we would send an e-mail with a forged From:

This case happened when we were not the organizer and then
modified the event. An e-mail would be sent with From: <organizer>,
with *all* participants in CC.

The correct is to not send anything, because the user was already
warned via message boz that the event will become out of sync with
the organizer's.
Related: bug 318394
FIXED-IN: 4.11.3

M  +4    -3    akonadi/calendar/incidencechanger.cpp
M  +11   -0    akonadi/calendar/tests/itiphandlertest.cpp

http://commits.kde.org/kdepimlibs/5efe6da97ced262603b1b5b50798c5df76cc0f0d